forecast added for current city

--- a/index.html
+++ b/index.html
@@ -54,30 +54,11 @@
       </ul>
 
       <ul class="weather__forecast">
-        <li>
-          <span class="day">Wtorek</span> <img src="assets/icons/clear-day.svg"/>
-          <span class="temperature"><span class="temperature__value">10.0</span>&deg;C</span>
-        </li>
-
-        <li>
-          <span class="day">Środa</span> <img src="assets/icons/snow.svg"/>
-          <span class="temperature"><span class="temperature__value">-2.3</span>&deg;C</span>
-        </li>
-
-        <li>
-          <span class="day">Czwartek</span> <img src="assets/icons/rain.svg"/>
-          <span class="temperature"><span class="temperature__value">4.8</span>&deg;C</span>
-        </li>
-
-        <li>
-          <span class="day">Piątek</span> <img src="assets/icons/cloudy.svg"/>
-          <span class="temperature"><span class="temperature__value">5.0</span>&deg;C</span>
-        </li>
-
-        <li>
-          <span class="day">Sobota</span> <img src="assets/icons/hail.svg"/>
-          <span class="temperature"><span class="temperature__value">8.6</span>&deg;C</span>
-        </li>
+<!--        <li>-->
+<!--          <span class="day">Wtorek</span> <img src="assets/icons/clear-day.svg"/>-->
+<!--          <span class="temperature"><span class="temperature__value">10.0</span>&deg;C</span>-->
+<!--        </li>-->
+        <!-- Days are added here as li elements-->
       </ul>
     </div>
   </div>
@@ -88,6 +69,6 @@
 </section>
 
 <script src="build/out.js"></script>
-<script src="js/app.js"></script>
+<!--<script src="js/app.js"></script>-->
 </body>
 </html>
