--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
      Poniższy kod możecie potraktować jako template do kolejnych modułów
      Możecie go sklonować używając metody cloneNode(true), i powstawiać odpowiednie wartości z aktualnego miasta.
   -->
-  <div class="module module__weather">
+  <div class="module module__weather" hidden>
     <button class="btn btn--icon btn--close"><i class="material-icons">close</i></button>
 
     <div class="weather">
