--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
   <div class="container">
     <div class="logo"><img src="assets/icons/logo.svg" alt="Logo"/> Weather App</div>
-    <button class="btn" id="add-city">Dodaj miasto <i class="material-icons">add_circle</i></button>
+    <button class="btn" id="add-city">Add city <i class="material-icons">add_circle</i></button>
   </div>
 </header>
 
@@ -20,10 +20,10 @@
   <!-- Search module -->
   <div class="module module__form" hidden>
     <button class="btn btn--icon btn--close"><i class="material-icons">close</i></button>
-    <h2>Znajdź miasto</h2>
+    <h2>Search city</h2>
 
     <form novalidate autocomplete="off" class="find-city">
-      <input type="text" name="search" id="search" placeholder="np. Wrocław"/>
+      <input type="text" name="search" id="search" placeholder="i.e. Warszawa"/>
       <button type="submit"><i class="material-icons">search</i></button>
     </form>
     <div class="search-error"></div>
@@ -38,7 +38,7 @@
 
       <div class="weather__info">
         <div class="city">
-          <span class="city__name">Wrocław</span> <span class="btn btn--icon"><i class="material-icons">edit</i></span>
+          <span class="city__name">Milan</span> <span class="btn btn--icon"><i class="material-icons">edit</i></span>
         </div>
         <div class="temperature"><span class="temperature__value">16.5</span>&deg;C</div>
       </div>
