--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   </div>
 </section>
 
-<script src="build/out.js"></script>
-<!--<script src="js/app.js"></script>-->
+<!--<script src="build/out.js"></script>-->
+<script src="js/app.js"></script>
 </body>
 </html>
